smetto di sviluppare il proprio motore scacchistico e mi focalizzo sulla interfaccia grafica