@@ -37,6 +37,13 @@
             <artifactId>chesslib</artifactId>
             <version>1.3.6</version>
         </dependency>
+
+        <!-- flatlaf -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.7.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -46,6 +53,16 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <vmArgs>
+                    --enable-native-access=ALL-UNNAMED
+                    </vmArgs>
+                </configuration>
+                </plugin>
         </plugins>
     </build>
 
